--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,6 @@
 {
     "recommendations": [
-        "eg2.vscode-npm-script"
+        "syler.sass-indented",
+        "howardzuo.vscode-npm-dependency"
     ]
 }
